load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = [
        "config.go",
        "toml.go",
    ],
    importpath = "github.com/tendermint/tendermint/config",
    visibility = ["//visibility:public"],
    deps = ["//libs/os"],
)

go_test(
    name = "config_test",
    srcs = [
        "config_test.go",
        "toml_test.go",
    ],
    embed = [":config"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":config",
    visibility = ["//visibility:public"],
)
