load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "consensus",
    srcs = [
        "metrics.gen.go",
        "metrics.go",
        "msgs.go",
        "reactor.go",
        "replay.go",
        "replay_file.go",
        "replay_stubs.go",
        "state.go",
        "ticker.go",
        "wal.go",
        "wal_generator.go",
    ],
    importpath = "github.com/tendermint/tendermint/consensus",
    visibility = ["//visibility:public"],
    deps = [
        "//abci/example/kvstore",
        "//config",
        "//consensus/types",
        "//crypto",
        "//crypto/merkle",
        "//libs/autofile",
        "//libs/bits",
        "//libs/clist",
        "//libs/events",
        "//libs/fail",
        "//libs/json",
        "//libs/log",
        "//libs/math",
        "//libs/os",
        "//libs/rand",
        "//libs/service",
        "//libs/sync",
        "//mempool",
        "//p2p",
        "//privval",
        "//proxy",
        "//state",
        "//store",
        "//types",
        "//types/time",
        "@com_github_cosmos_gogoproto//proto:go_default_library",
        "@com_github_go_kit_kit//metrics:go_default_library",
        "@com_github_go_kit_kit//metrics/discard:go_default_library",
        "@com_github_go_kit_kit//metrics/prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_tendermint_tm_db//:go_default_library",
    ],
)

go_test(
    name = "consensus_test",
    srcs = [
        "byzantine_test.go",
        "common_test.go",
        "invalid_test.go",
        "mempool_test.go",
        "msgs_test.go",
        "reactor_test.go",
        "replay_test.go",
        "state_test.go",
        "wal_test.go",
    ],
    embed = [":consensus"],
    deps = [
        "//abci/client",
        "//abci/example/code",
        "//abci/example/kvstore",
        "//abci/types/mocks",
        "//config",
        "//consensus/types",
        "//crypto",
        "//crypto/encoding",
        "//crypto/merkle",
        "//crypto/tmhash",
        "//evidence",
        "//internal/test",
        "//libs/autofile",
        "//libs/bits",
        "//libs/bytes",
        "//libs/log",
        "//libs/os",
        "//libs/pubsub",
        "//libs/rand",
        "//libs/service",
        "//libs/sync",
        "//mempool",
        "//mempool/v0:mempool",
        "//mempool/v1:mempool",
        "//p2p",
        "//p2p/mock",
        "//privval",
        "//proxy",
        "//state",
        "//state/mocks",
        "//store",
        "//types",
        "//types/time",
        "@com_github_cosmos_gogoproto//proto:go_default_library",
        "@com_github_go_kit_log//term:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//mock:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@com_github_tendermint_tm_db//:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":consensus",
    visibility = ["//visibility:public"],
)
