load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "node",
    srcs = [
        "doc.go",
        "id.go",
        "node.go",
    ],
    importpath = "github.com/tendermint/tendermint/node",
    visibility = ["//visibility:public"],
    deps = [
        "//blocksync",
        "//config",
        "//consensus",
        "//crypto",
        "//evidence",
        "//libs/json",
        "//libs/log",
        "//libs/pubsub",
        "//libs/service",
        "//light",
        "//mempool",
        "//mempool/v0:mempool",
        "//mempool/v1:mempool",
        "//p2p",
        "//p2p/pex",
        "//privval",
        "//proxy",
        "//rpc/core",
        "//rpc/jsonrpc/server",
        "//state",
        "//state/indexer",
        "//state/indexer/block/kv",
        "//state/indexer/block/null",
        "//state/indexer/sink/psql",
        "//state/txindex",
        "//state/txindex/kv",
        "//state/txindex/null",
        "//statesync",
        "//store",
        "//types",
        "//types/time",
        "//version",
        "@com_github_lib_pq//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@com_github_rs_cors//:go_default_library",
        "@com_github_tendermint_tm_db//:go_default_library",
    ],
)

go_test(
    name = "node_test",
    srcs = ["node_test.go"],
    embed = [":node"],
    deps = [
        "//abci/example/kvstore",
        "//config",
        "//crypto/ed25519",
        "//evidence",
        "//libs/log",
        "//libs/rand",
        "//mempool",
        "//mempool/v0:mempool",
        "//mempool/v1:mempool",
        "//p2p",
        "//p2p/conn",
        "//p2p/mock",
        "//privval",
        "//proxy",
        "//state",
        "//store",
        "//types",
        "//types/time",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@com_github_tendermint_tm_db//:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":node",
    visibility = ["//visibility:public"],
)
