load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "p2p",
    srcs = [
        "base_reactor.go",
        "conn_set.go",
        "errors.go",
        "fuzz.go",
        "key.go",
        "metrics.gen.go",
        "metrics.go",
        "netaddress.go",
        "node_info.go",
        "peer.go",
        "peer_set.go",
        "switch.go",
        "test_util.go",
        "transport.go",
        "types.go",
    ],
    importpath = "github.com/tendermint/tendermint/p2p",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//crypto",
        "//crypto/ed25519",
        "//libs/bytes",
        "//libs/cmap",
        "//libs/json",
        "//libs/log",
        "//libs/net",
        "//libs/os",
        "//libs/protoio",
        "//libs/rand",
        "//libs/service",
        "//libs/strings",
        "//libs/sync",
        "//p2p/conn",
        "//version",
        "@com_github_go_kit_kit//metrics:go_default_library",
        "@com_github_go_kit_kit//metrics/discard:go_default_library",
        "@com_github_go_kit_kit//metrics/prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@org_golang_x_net//netutil:go_default_library",
    ],
)

go_test(
    name = "p2p_test",
    srcs = [
        "key_test.go",
        "netaddress_test.go",
        "node_info_test.go",
        "peer_set_test.go",
        "peer_test.go",
        "switch_test.go",
        "transport_test.go",
    ],
    embed = [":p2p"],
    deps = [
        "//config",
        "//crypto",
        "//crypto/ed25519",
        "//libs/bytes",
        "//libs/log",
        "//libs/protoio",
        "//libs/rand",
        "//libs/service",
        "//libs/sync",
        "//p2p/conn",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":p2p",
    visibility = ["//visibility:public"],
)
