load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "privval",
    srcs = [
        "doc.go",
        "errors.go",
        "file.go",
        "msgs.go",
        "retry_signer_client.go",
        "signer_client.go",
        "signer_dialer_endpoint.go",
        "signer_endpoint.go",
        "signer_listener_endpoint.go",
        "signer_requestHandler.go",
        "signer_server.go",
        "socket_dialers.go",
        "socket_listeners.go",
        "utils.go",
    ],
    importpath = "github.com/tendermint/tendermint/privval",
    visibility = ["//visibility:public"],
    deps = [
        "//crypto",
        "//crypto/ed25519",
        "//crypto/encoding",
        "//libs/bytes",
        "//libs/json",
        "//libs/log",
        "//libs/net",
        "//libs/os",
        "//libs/protoio",
        "//libs/service",
        "//libs/sync",
        "//libs/tempfile",
        "//p2p/conn",
        "//types",
        "//types/time",
        "@com_github_cosmos_gogoproto//proto:go_default_library",
    ],
)

go_test(
    name = "privval_test",
    srcs = [
        "file_test.go",
        "msgs_test.go",
        "signer_client_test.go",
        "signer_listener_endpoint_test.go",
        "socket_dialers_test.go",
        "socket_listeners_test.go",
        "utils_test.go",
    ],
    embed = [":privval"],
    deps = [
        "//crypto",
        "//crypto/ed25519",
        "//crypto/encoding",
        "//crypto/tmhash",
        "//libs/json",
        "//libs/log",
        "//libs/net",
        "//libs/rand",
        "//types",
        "//types/time",
        "@com_github_cosmos_gogoproto//proto:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":privval",
    visibility = ["//visibility:public"],
)
