load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "state",
    srcs = [
        "errors.go",
        "execution.go",
        "metrics.gen.go",
        "metrics.go",
        "rollback.go",
        "services.go",
        "state.go",
        "store.go",
        "tx_filter.go",
        "validation.go",
    ],
    importpath = "github.com/tendermint/tendermint/state",
    visibility = ["//visibility:public"],
    deps = [
        "//crypto",
        "//crypto/encoding",
        "//libs/fail",
        "//libs/log",
        "//libs/math",
        "//libs/os",
        "//mempool",
        "//proxy",
        "//types",
        "//types/time",
        "//version",
        "@com_github_cosmos_gogoproto//proto:go_default_library",
        "@com_github_go_kit_kit//metrics:go_default_library",
        "@com_github_go_kit_kit//metrics/discard:go_default_library",
        "@com_github_go_kit_kit//metrics/prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_tendermint_tm_db//:go_default_library",
    ],
)

go_test(
    name = "state_test",
    srcs = [
        "execution_test.go",
        "export_test.go",
        "helpers_test.go",
        "rollback_test.go",
        "state_test.go",
        "store_test.go",
        "tx_filter_test.go",
        "validation_test.go",
    ],
    embed = [":state"],
    deps = [
        "//abci/client/mocks",
        "//abci/types/mocks",
        "//config",
        "//crypto",
        "//crypto/ed25519",
        "//crypto/encoding",
        "//crypto/tmhash",
        "//internal/test",
        "//libs/log",
        "//libs/rand",
        "//mempool/mocks",
        "//proxy",
        "//proxy/mocks",
        "//state/mocks",
        "//types",
        "//types/time",
        "//version",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//mock:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@com_github_tendermint_tm_db//:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":state",
    visibility = ["//visibility:public"],
)
