load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "types",
    srcs = [
        "block.go",
        "block_meta.go",
        "canonical.go",
        "encoding_helper.go",
        "errors.go",
        "event_bus.go",
        "events.go",
        "evidence.go",
        "genesis.go",
        "keys.go",
        "light.go",
        "params.go",
        "part_set.go",
        "priv_validator.go",
        "proposal.go",
        "protobuf.go",
        "results.go",
        "signable.go",
        "signed_msg_type.go",
        "test_util.go",
        "tx.go",
        "utils.go",
        "validation.go",
        "validator.go",
        "validator_set.go",
        "vote.go",
        "vote_set.go",
    ],
    importpath = "github.com/tendermint/tendermint/types",
    visibility = ["//visibility:public"],
    deps = [
        "//crypto",
        "//crypto/ed25519",
        "//crypto/encoding",
        "//crypto/merkle",
        "//crypto/secp256k1",
        "//crypto/tmhash",
        "//libs/bits",
        "//libs/bytes",
        "//libs/json",
        "//libs/log",
        "//libs/math",
        "//libs/os",
        "//libs/protoio",
        "//libs/pubsub",
        "//libs/pubsub/query",
        "//libs/rand",
        "//libs/service",
        "//libs/sync",
        "//types/time",
        "//version",
        "@com_github_cosmos_gogoproto//proto:go_default_library",
        "@com_github_cosmos_gogoproto//types:go_default_library",
    ],
)

go_test(
    name = "types_test",
    srcs = [
        "block_meta_test.go",
        "block_test.go",
        "canonical_test.go",
        "event_bus_test.go",
        "events_test.go",
        "evidence_test.go",
        "genesis_test.go",
        "light_test.go",
        "params_test.go",
        "part_set_test.go",
        "proposal_test.go",
        "protobuf_test.go",
        "results_test.go",
        "tx_test.go",
        "validator_set_test.go",
        "validator_test.go",
        "vote_set_test.go",
        "vote_test.go",
    ],
    embed = [":types"],
    deps = [
        "//crypto",
        "//crypto/ed25519",
        "//crypto/encoding",
        "//crypto/merkle",
        "//crypto/tmhash",
        "//libs/bits",
        "//libs/bytes",
        "//libs/json",
        "//libs/math",
        "//libs/protoio",
        "//libs/pubsub",
        "//libs/pubsub/query",
        "//libs/rand",
        "//libs/test",
        "//types/time",
        "//version",
        "@com_github_cosmos_gogoproto//proto:go_default_library",
        "@com_github_cosmos_gogoproto//types:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":types",
    visibility = ["//visibility:public"],
)
