load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "priv_val_server_lib",
    srcs = ["main.go"],
    importpath = "github.com/tendermint/tendermint/cmd/priv_val_server",
    visibility = ["//visibility:private"],
    deps = [
        "//crypto/ed25519",
        "//libs/log",
        "//libs/net",
        "//libs/os",
        "//privval",
    ],
)

go_binary(
    name = "priv_val_server",
    embed = [":priv_val_server_lib"],
    visibility = ["//visibility:public"],
)
