load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "merkle",
    srcs = [
        "doc.go",
        "hash.go",
        "proof.go",
        "proof_key_path.go",
        "proof_op.go",
        "proof_value.go",
        "tree.go",
        "types.go",
    ],
    importpath = "github.com/tendermint/tendermint/crypto/merkle",
    visibility = ["//visibility:public"],
    deps = ["//crypto/tmhash"],
)

go_test(
    name = "merkle_test",
    srcs = [
        "proof_key_path_test.go",
        "proof_test.go",
        "rfc6962_test.go",
        "tree_test.go",
    ],
    embed = [":merkle"],
    deps = [
        "//crypto/tmhash",
        "//libs/rand",
        "//libs/test",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":merkle",
    visibility = ["//visibility:public"],
)
