load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sr25519",
    srcs = [
        "encoding.go",
        "privkey.go",
        "pubkey.go",
    ],
    importpath = "github.com/tendermint/tendermint/crypto/sr25519",
    visibility = ["//visibility:public"],
    deps = [
        "//crypto",
        "//crypto/tmhash",
        "//libs/json",
        "@com_github_chainsafe_go_schnorrkel//:go_default_library",
    ],
)

go_test(
    name = "sr25519_test",
    srcs = [
        "bench_test.go",
        "sr25519_test.go",
    ],
    embed = [":sr25519"],
    deps = [
        "//crypto",
        "//crypto/internal/benchmarking",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)

alias(
    name = "go_default_library",
    actual = ":sr25519",
    visibility = ["//visibility:public"],
)
